# ESPER-Utau

./: .gitignore  .gitmodules  CMakeLists.txt  ESPER-Utau.yaml  LICENSE  README.md  esper-config.ini  esper.yaml
ESPER/: esper.def  esper.exp  esper.h
ESPER-Utau/: ESPER-Utau.sln
ESPER-Utau/ESPER-Utau/: ArgParser.cs  AudioProcessor.cs  ConfigParser.cs  ESPER-Utau.csproj  EsperWrapper.cs  FrqParser.cs  ParameterUtils.cs  PitchUtils.cs  Program.cs
src/: argparse.cpp  argparse.hpp  create-esper-structs.cpp  create-esper-structs.hpp  esper-utils.cpp  esper-utils.hpp  fileio.cpp  fileio.hpp  main.cpp
